docs: reorganize docs

--- a/docs/content/docs/3.files/4.csv.md
+++ b/docs/content/docs/3.files/4.csv.md
@@ -3,7 +3,65 @@ title: CSV
 description: How to define, write and query CSV data.
 ---
 
-## Define Collection
+## Single-file source
+
+When you point a collection to a single CSV file (instead of a glob), Nuxt Content **treats each data row as a separate item** in the collection.
+
+- **Define the collection**: set `source` to the path of a single `.csv` file.
+- **Item generation**: each data row becomes an item with the row’s fields at the top level (no `body` array).
+- **IDs**: item IDs are suffixed with `#<rowNumber>`, where `#1` is the first data row after the header.
+
+```ts [content.config.ts]
+import { defineCollection, defineContentConfig } from '@nuxt/content'
+import { z } from 'zod'
+
+export default defineContentConfig({
+  collections: {
+    people: defineCollection({
+      type: 'data',
+      source: 'org/people.csv',
+      schema: z.object({
+        name: z.string(),
+        email: z.string().email()
+      })
+    })
+  }
+})
+```
+
+```csv [content/org/people.csv]
+name,email
+Alice,alice@example.com
+Bob,bob@example.com
+```
+
+Each row produces its own item. For example, the first data row will have an ID ending with `#1` and the second with `#2`. You can query by any column:
+
+```ts
+const { data: alice } = await useAsyncData('alice', () =>
+  queryCollection('people')
+    .where('email', '=', 'alice@example.com')
+    .first()
+)
+
+const { data: allPeople } = await useAsyncData('all-people', () =>
+  queryCollection('people')
+    .order('name', 'ASC')
+    .all()
+)
+```
+
+::note
+- The header row is required and is not turned into an item.
+- With a single-file source, items contain row fields at the top level (no `body`).
+- If you prefer treating each CSV file as a single item containing all rows in `body`, use a glob source like `org/**.csv` instead of a single file.
+::: 
+
+
+## Multiple-files source
+
+If you uses `*/**.csv` as source in configuration, Nuxt Content will treat them differently from single-file collections.  
+**Each file(not row) will be treated as an item**, rows will be parsed into `body` field in item object as an array.
 
 ```ts [content.config.ts]
 import { defineCollection, defineContentConfig, z } from '@nuxt/content'
@@ -26,9 +84,7 @@ export default defineContentConfig({
 
 ```
 
-## Create `.csv` files
-
-Create author files in `content/authors/` directory.
+Create chart files in `content/charts/` directory.
 
 ::code-group
 ```csv [content/charts/chart1.csv]
@@ -50,31 +106,33 @@ Baz,789
 Each CSV file should have a header row that defines the column names, which will be used as object keys when parsed.
 ::
 
-## Query Data
-
-Now we can query authors:
+Now we can query charts:
 
 ```vue
 <script lang="ts" setup>
 // Find a single chart
-const { data: author } = await useAsyncData('chart1', () => {
+const { data: chart1 } = await useAsyncData('chart1', () => {
   return queryCollection('charts')
     .where('id', '=', 'charts/charts/chart1.csv')
     .first()
 })
 
-// Get all authors
-const { data: authors } = await useAsyncData('authors', () => {
-  return queryCollection('authors')
+// Get all charts
+const { data: charts } = await useAsyncData('charts', () => {
+  return queryCollection('charts')
     .order('id', 'ASC')
     .all()
 })
+
 </script>
 
 <template>
   <ul>
     <li v-for="chart in charts" :key="chart.id">
-      <!-- get data from chart.body -->
+      <!-- CSV data are in `chart.body` as an array -->
+      <p v-for="data in chart.body">
+        {{ data.label }} - {{ data.value }}
+      </p>
     </li>
   </ul>
 </template>
@@ -143,58 +201,4 @@ id;name;email
 ::note
 The CSV parser can be disabled by setting `csv: false` in the configuration if you don't need CSV support.
 ::
-
-## Single file source
-
-When you point a collection to a single CSV file (instead of a glob), Nuxt Content treats each data row as a separate item in the collection.
-
-- **Define the collection**: set `source` to the path of a single `.csv` file.
-- **Item generation**: each data row becomes an item with the row’s fields at the top level (no `body` array).
-- **IDs**: item IDs are suffixed with `#<rowNumber>`, where `#1` is the first data row after the header.
-
-```ts [content.config.ts]
-import { defineCollection, defineContentConfig } from '@nuxt/content'
-import { z } from 'zod'
-
-export default defineContentConfig({
-  collections: {
-    people: defineCollection({
-      type: 'data',
-      source: 'org/people.csv',
-      schema: z.object({
-        name: z.string(),
-        email: z.string().email()
-      })
-    })
-  }
-})
-```
-
-```csv [content/org/people.csv]
-name,email
-Alice,alice@example.com
-Bob,bob@example.com
-```
-
-Each row produces its own item. For example, the first data row will have an ID ending with `#1` and the second with `#2`. You can query by any column:
-
-```ts
-const { data: alice } = await useAsyncData('alice', () =>
-  queryCollection('people')
-    .where('email', '=', 'alice@example.com')
-    .first()
-)
-
-const { data: allPeople } = await useAsyncData('all-people', () =>
-  queryCollection('people')
-    .order('name', 'ASC')
-    .all()
-)
-```
-
-::note
-- The header row is required and is not turned into an item.
-- With a single-file source, items contain row fields at the top level (no `body`).
-- If you prefer treating each CSV file as a single item containing all rows in `body`, use a glob source like `org/**.csv` instead of a single file.
-::: 
 
