docs: add `markdown.build.contentHeading` option
Add documentation for configuration option.

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -135,6 +135,20 @@ export default defineNuxtConfig({
 })
 ```
 
+#### `contentHeading`
+
+::code-group
+```ts [Default]
+contentHeading: true
+```
+
+```ts [Signature]
+type ContentHeading = boolean
+```
+::
+
+Setting this option to `false` disables the automatic generation of `title` and `description` fields that are normally extracted from the first H1 heading and the paragraphs that follow it.
+
 #### `highlight`
 
 ::code-group
