docs(studio): update to match alpha 2 version

--- a/docs/content/docs/9.studio/7.advanced.md
+++ b/docs/content/docs/9.studio/7.advanced.md
@@ -1,14 +1,14 @@
 ---
-title: Synchronization
+title: Advanced
 description: Understand how Nuxt Studio synchronizes content between your production website and your GitHub repository.
 navigation:
-  title: Synchronization
+  title: Advanced
 seo:
   title: Real time synchronization between Studio and GitHub
   description: Understand how Nuxt Studio synchronizes content between your production website and your GitHub repository.
 ---
 
-This page explains how Nuxt Studio keeps your content synchronized between the browser (your production site) and your GitHub repository.
+This page explains how Nuxt Studio keeps your content synchronized between the browser (your production site) and your Git prodiver repository.
 
 ::prose-note
 This section is informational. Synchronization happens automatically after setup and requires no manual action.
@@ -24,7 +24,7 @@ When the application loads in the browser, Nuxt Content v3 downloads a SQLite da
 This local database contains all content from the `content/` directory of your deployed branch.
 
 ::warning
-This browser-side database stays in sync with GitHub as long as your last deployment was built successfully and your CI/CD pipeline completed without errors.
+This browser-side database stays in sync with your Git repository as long as your last deployment was built successfully and your CI/CD pipeline completed without errors.
 ::
 
 ### Draft Storage (IndexedDB)
@@ -37,9 +37,9 @@ Each time the Studio app loads, these drafts are merged with the SQLite database
 Drafts are stored only in your local browser. They are not shared between editors or devices.
 ::
 
-### GitHub Repository
+### Git Repository
 
-When you publish, Studio commits your draft changes directly to your GitHub repository through the GitHub API. :br
+When you publish, Studio commits your draft changes directly to your Git repository (GitHub or GitLab) through the provider's API. :br
 Your CI/CD pipeline then rebuilds and redeploys your site automatically.
 
 ::warning
@@ -84,12 +84,12 @@ The local SQLite database is updated to include your draft content, allowing ins
 
 #### Conflict Detection
 
-Studio compares your draft content against the latest version on GitHub to detect possible conflicts.
+Studio compares your draft content against the latest version in your Git repository to detect possible conflicts.
 
 Conflicts can occur when:
 
 - Someone pushes a commit that modifies the same file and its version is currently building.
-- A deployment fails or hasn’t completed, leaving the production database out of date and unsync with GitHub.
+- A deployment fails or hasn't completed, leaving the production database out of date and out of sync with your Git repository.
 ::
 
 ### Publishing Changes
@@ -101,9 +101,9 @@ When you publish your edits:
 
 Studio gathers all draft items that contain changes.
 
-#### GitHub Commit
+#### Git Commit
 
-Using the GitHub API, Studio creates a new commit with all updated files.
+Using your Git provider's API, Studio creates a new commit with all updated files.
 
 #### Deployment Trigger
 
