docs(studio): move from GitHub to agnostic git provider approach

--- a/docs/content/docs/9.studio/7.advanced.md
+++ b/docs/content/docs/9.studio/7.advanced.md
@@ -1,11 +1,11 @@
 ---
 title: Advanced
-description: Understand how Nuxt Studio synchronizes content between your production website and your GitHub repository.
+description: Understand how Nuxt Studio synchronizes content between your production website and your Git provider.
 navigation:
   title: Advanced
 seo:
   title: Real time synchronization between Studio and GitHub
-  description: Understand how Nuxt Studio synchronizes content between your production website and your GitHub repository.
+  description: Understand how Nuxt Studio synchronizes content between your production website and your Git provider.
 ---
 
 This page explains how Nuxt Studio keeps your content synchronized between the browser (your production site) and your Git prodiver repository.
