--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -67,7 +67,7 @@ export default defineNuxtConfig({
 })
 ```
 
-### Options
+### Repository Options
 
 #### Root directory `default: ''`
 
@@ -159,3 +159,34 @@ Secure OAuth-based login with **Google** should be available quickly in the Beta
 ::tip
 You can also use the shortcut `CMD` + `K` to redirect to the Studio route.
 ::
+
+## Internationalization
+
+Nuxt Studio includes built-in internationalization support with the following languages available:
+
+- 🇬🇧 **English** (default)
+- 🇫🇷 **French**
+
+### Configuration
+
+Set your preferred language in your `nuxt.config.ts`:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  studio: {
+    i18n: {
+      defaultLocale: 'fr' // 'en' or 'fr'
+    }
+  }
+})
+```
+
+This will translate:
+
+- All UI elements and labels
+- Monaco editor snippets and code completion
+- Contextual messages and notifications
+
+### Contributions
+
+Community contributions for new language translations are welcome! If you'd like to add support for a new language, please visit the [GitHub repository](https://github.com/nuxt-content/studio) and drop a pull request 💚
