docs: grammar fixes in global components docs
Corrected grammar in warning about global components in Markdown.

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -162,7 +162,7 @@ Default slot content
 ```
 
 ::warning
-Components that are used in Markdown has to be marked as `global` in your Nuxt app if you don't use the `components/content/` directory, visit [Nuxt 3 docs](https://nuxt.com/docs/guide/directory-structure/components) to learn more about it.
+Components that are used in Markdown have to be marked as `global` in your Nuxt app if you don't use the `components/content/` directory. Visit [Nuxt 3 docs](https://nuxt.com/docs/guide/directory-structure/components) to learn more.
 ::
 
 #### Block Components
