docs: simplify usage for studio setup

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -13,52 +13,132 @@ This documentation covers only the new open-source Nuxt Studio module.
 Click here to view the documentation for the legacy standalone platform.
 ::
 
-## Install
+## Installation
 
-Add the Nuxt Studio module to your project:
-
-::code-group
-```bash [pnpm]
-pnpm add nuxt-studio@alpha
-```
-
-```bash [npm]
-npm install nuxt-studio@alpha
-```
-
-```bash [yarn]
-yarn add nuxt-studio@alpha
-```
-
-```bash [bun]
-bun add nuxt-studio@alpha
-```
-::
-
-Alternatively, use the Nuxt CLI to automatically add the module:
+Install Nuxt Studio using the Nuxt CLI within your project:
 
 ```bash [Terminal]
-npx nuxi module add nuxt-studio@alpha
+npx nuxt module add nuxt-studio@alpha
 ```
 
-## Configure
+::tip{icon="i-lucide-rocket"}
+Start your development server and start editing your Nuxt Content website.
+::
 
-Add the module to your `nuxt.config.ts` and configure your repository based on your Git provider:
+## Development mode
+
+When running locally, **any file changes will be synchronized in real time with your local filesystem**.
+
+The publish system is only available in production mode. Use your current workflow (git command, IDE, GitHub Desktop...) to commit your changes.
+
+## Production mode
+
+While Nuxt Studio can be useful during development (especially with the upcoming Studio editor) its main advantage is the ability to publish changes directly from your production website.
+
+In order to publish changes in production, you need to configure the git repository:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
-  modules: [
-    '@nuxt/content',
-    'nuxt-studio'
-  ],
-  
   studio: {
-    // Studio admin route (default: '/_studio')
-    route: '/_studio',
-    
     // Git repository configuration (owner and repo are required)
     repository: {
       provider: 'github', // 'github' or 'gitlab'
+      owner: 'your-username', // your GitHub/GitLab username or organization
+      repo: 'your-repo', // your repository name
+      branch: 'main', // the branch to commit to (default: 'main')
+    }
+  }
+})
+```
+
+::callout{to="#options"}
+Read more about all the available options.
+::
+
+### OAuth Configuration
+
+To enable this Nuxt Studio supports authentication through both GitHub and GitLab OAuth providers allowing you to log in and publish updates from production.
+
+::tip{icon="i-lucide-info" to="/docs/studio/providers#oauth-providers"}
+Follow the setup instructions for your Git provider.
+::
+
+Once your OAuth app is setup, you should have your environment variables set in your hosting provider.
+
+::code-group
+```bash [GitHub]
+STUDIO_GITHUB_CLIENT_ID=<your_github_client_id>
+STUDIO_GITHUB_CLIENT_SECRET=<your_github_client_secret>
+```
+
+```bash [GitLab]
+STUDIO_GITLAB_APPLICATION_ID=<your_gitlab_application_id>
+STUDIO_GITLAB_APPLICATION_SECRET=<your_gitlab_secret>
+```
+::
+
+### Deployment
+
+Nuxt Studio requires a server-side route for authentication.
+
+While static generation remains supported with [Nuxt hybrid rendering](https://nuxt.com/docs/4.x/guide/concepts/rendering#hybrid-rendering), your site must be **deployed on a platform that supports server-side rendering (SSR)** using `nuxt build` command.
+
+If you want to pre-render all your pages, use the following configuration:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  nitro: {
+    prerender: {
+      // Pre-render the homepage
+      routes: ['/'],
+      // Then crawl all the links on the page
+      crawlLinks: true
+    }
+  }
+})
+```
+
+### Open Studio
+
+Once deployed, open Studio by navigating to your configured route (default: `/_studio`):
+
+1. Click the login button if it does not directly redirect to the OAuth app authorization page
+2. Authorize the OAuth application
+3. You'll be redirected back to Studio ready to edit your content
+
+::tip
+You can also use the shortcut `CMD` + `.` to redirect to the Studio route.
+::
+
+::note
+OAuth-based login with **Google** will be available soon.
+::
+
+## Options
+
+Add the module to your `nuxt.config.ts` and configure your repository based on your Git provider:
+
+### Admin route
+
+Customize the login route using the `route` option:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  studio: {
+    route: '/admin', // default: '/_studio'
+  }
+})
+```
+
+### Repository
+
+Use the `repository` option to specify your git repository to sync in production mode.
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  studio: {
+    repository: {
+      provider: 'github', // 'github' or 'gitlab', default: 'github'
       owner: 'your-username', // your GitHub/GitLab username or organization
       repo: 'your-repo', // your repository name
       branch: 'main', // the branch to commit to (default: main)
@@ -66,8 +146,6 @@ export default defineNuxtConfig({
   }
 })
 ```
-
-### Repository Options
 
 #### Root directory `default: ''`
 
@@ -101,75 +179,14 @@ export default defineNuxtConfig({
 })
 ```
 
-## Dev mode
-
-🚀 That’s all you need to enable Studio in local.
-
-Once your project is running locally, any file changes will be synchronized in real time with the file system.
-
-::warning
-The publish system is only available in production mode. You can use your classical workflow (IDE, CLI, GitHub Desktop...) to publish your changes in local.
-::
-
-## Production mode
-
-While Nuxt Studio can be useful during development (especially with the upcoming Studio editor) its main advantage is the ability to publish changes directly from your production website.
-
-### OAuth Configuration
-
-To enable this Nuxt Studio supports authentication through both GitHub and GitLab OAuth providers allowing you to log in and publish updates from production.
-
-::tip{icon="i-lucide-info" to="/docs/studio/github#oauth-providers"}
-Choose your provider and follow the dedicated setup instructions for your Git provider in this section.
-::
-
-### Deployment
-
-Nuxt Studio requires a server-side route for authentication.
-
-While static generation remains supported with [Nuxt hybrid rendering](https://nuxt.com/docs/4.x/guide/concepts/rendering#hybrid-rendering), your site must be **deployed on a platform that supports server-side rendering (SSR)** using `nuxt build` command.
-
-If you want to pre-render all your pages, use the following configuration:
-
-```ts [nuxt.config.ts]
-export default defineNuxtConfig({
-  nitro: {
-    prerender: {
-      // Pre-render the homepage
-      routes: ['/'],
-      // Then crawl all the links on the page
-      crawlLinks: true
-    }
-  }
-})
-```
-
-### Accessing Studio
-
-After deployment, access the Studio interface by navigating to your configured route (default: `/_studio`):
-
-1. Click the login button if it does not directly redirect to the OAuth app authorization page
-2. Authorize the OAuth application
-3. You'll be redirected back to Studio ready to edit your content
-
-::note
-Secure OAuth-based login with **Google** should be available quickly in the Beta release.
-::
-
-::tip
-You can also use the shortcut `CMD` + `K` to redirect to the Studio route.
-::
-
-## Internationalization
+### Internationalization
 
 Nuxt Studio includes built-in internationalization support with the following languages available:
 
 - 🇬🇧 **English** (default)
 - 🇫🇷 **French**
 
-### Configuration
-
-Set your preferred language in your `nuxt.config.ts`:
+Set your preferred language using the `i18n` option:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -187,6 +204,20 @@ This will translate:
 - Monaco editor snippets and code completion
 - Contextual messages and notifications
 
-### Contributions
+::callout{icon="i-lucide-heart-handshake"}
+Community contributions for new language translations are welcome! If you'd like to add support for a new language, please visit the [GitHub repository](https://github.com/nuxt-content/studio) and drop a pull request.
+::
 
-Community contributions for new language translations are welcome! If you'd like to add support for a new language, please visit the [GitHub repository](https://github.com/nuxt-content/studio) and drop a pull request 💚
+### Dev mode
+
+If you want to use test locally your production setup, disable the `dev` option:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  studio: {
+    dev: false
+  }
+})
+```
+
+Make sure to create another GitHub/GitLab OAuth app that redirects to your local dev server (usually <http://localhost:3000>).
