--- a/docs/content/docs/9.studio/3.providers.md
+++ b/docs/content/docs/9.studio/3.providers.md
@@ -1,6 +1,6 @@
 ---
 title: Oauth Providers
-description: Configure OAuth providers and synchronizes content between your production website and your Git repository.
+description: Configure OAuth providers and synchronizes content between your production website and your GitHub or GitLab repository.
 navigation:
   title: Providers
 seo:
@@ -8,15 +8,7 @@ seo:
   description: Configure GitHub or GitLab OAuth and synchronizes content between your production website and your Git repository.
 ---
 
-::prose-note
-After initial OAuth setup, synchronization happens automatically and requires no manual action.
-::
-
-## OAuth Providers
-
-Nuxt Studio supports authentication with both GitHub and GitLab OAuth providers.
-
-### GitHub OAuth App
+## GitHub
 
 To use GitHub as your Git provider, you need to create a GitHub OAuth application.
 
@@ -50,7 +42,11 @@ STUDIO_GITHUB_CLIENT_SECRET=<your_github_client_secret>
 ```
 ::
 
-### GitLab OAuth App
+::tip
+That's it! Once deployed with the appropriate credentials set as environment variables. Studio will be accessible from your production instance. Just login on the `/_studio` (or on the route you've configured) to start editing.
+::
+
+## GitLab
 
 To use GitLab as your Git provider, you need to create a GitLab OAuth application.
 
@@ -79,8 +75,8 @@ After creating the OAuth application, you'll receive:
 Add the GitLab OAuth credentials to your deployment platform's environment variables or in your `.env` file in local
 
 ```bash [.env]
-STUDIO_GITLAB_CLIENT_ID=<your_gitlab_application_id>
-STUDIO_GITLAB_CLIENT_SECRET=<your_gitlab_secret>
+STUDIO_GITLAB_APPLICATION_ID=<your_gitlab_application_id>
+STUDIO_GITLAB_APPLICATION_SECRET=<your_gitlab_secret>
 ```
 ::
 
@@ -117,10 +113,6 @@ This is useful when you want to review changes on a preview environment before m
 
 Update your `nuxt.config.ts` to target your staging branch.
 
-  :::tip
-  You can use environment variables to manage multiple branches for different environments.
-  :::
-
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   studio: {
@@ -132,6 +124,10 @@ export default defineNuxtConfig({
   }
 })
 ```
+
+  :::tip
+  You can use environment variables to manage multiple branches for different environments.
+  :::
 
 ### Deploy
 
