docs(studio): document de locale availability

--- a/docs/content/docs/9.studio/2.setup.md
+++ b/docs/content/docs/9.studio/2.setup.md
@@ -185,6 +185,7 @@ Nuxt Studio includes built-in internationalization support with the following la
 
 - 🇬🇧 **English** (default)
 - 🇫🇷 **French**
+- 🇩🇪 **German**
 
 Set your preferred language using the `i18n` option:
 
@@ -192,7 +193,7 @@ Set your preferred language using the `i18n` option:
 export default defineNuxtConfig({
   studio: {
     i18n: {
-      defaultLocale: 'fr' // 'en' or 'fr'
+      defaultLocale: 'fr' // 'en', 'fr' or 'de'
     }
   }
 })
