--- a/docs/content/docs/6.deploy/3.nuxthub.md
+++ b/docs/content/docs/6.deploy/3.nuxthub.md
@@ -3,39 +3,18 @@ title: NuxtHub
 description: Deploy your Content app to NuxtHub
 ---
 
-::card
-Quick Setup
-
-1. Install the `@nuxthub/core` module `nuxi module add hub`
-2. Use `npx nuxthub deploy` to deploy your content to NuxtHub
-::
-
-:hr
-
 Nuxt Content module has a built-in integration with [NuxtHub](https://hub.nuxt.com) to deploy your content.
 
 To enable NuxtHub integration, you need to install the `@nuxthub/core` module and register it in your `nuxt.config.ts`. More efficiently, you can use `nuxi module` command to do both at once.
 
-```bash
+```bash [Terminal]
 npx nuxi module add hub
 ```
 
-That's it :tada:
+That's it 🎉
 
-Now you can use the `npx nuxthub deploy` command to deploy your content to NuxtHub.
-
-```bash
-npx nuxthub deploy
-```
-
-
-::note
-Nuxt Content module automatically enables NuxtHub database. And update database configuration to use Cloudflare D1 with `DB` binding name. (This is default configuration for NuxtHub database.)
-
-:br
-
-You can override the database configuration by providing your own database configuration in `nuxt.config.ts`.
+::callout
+Nuxt Content module automatically reads the NuxtHub database options in order to share the same database to store the Nuxt Content data.
 ::
 
-
-Checkout the [NuxtHub documentation](https://hub.nuxt.com/docs/getting-started/deploy) for more information.
+Checkout the [NuxtHub documentation](https://hub.nuxt.com) for more information.
