docs: update AWS Amplify deployment instructions
Added options for using native node:sqlite or sqlite3 in AWS Amplify setup.

--- a/docs/content/docs/6.deploy/8.aws-amplify.md
+++ b/docs/content/docs/6.deploy/8.aws-amplify.md
@@ -6,14 +6,36 @@ description: Deploy your Content app to AWS Amplify
 ::card
 Quick Setup
 
-- Install `sqlite3` package in your project.
-- Go to AWS Amplify dashboard and create a new project using git repository and deploy the app.
+- Prepare Sqlite Connector
+  - Option A (recommended on Node.js 22+): Use native `node:sqlite`
+  - Option B (legacy): Install `sqlite3` package in your project.
+- Go to AWS Amplify dashboard and create a new project using your git repository and deploy the app.
 ::
 
 :hr
 
 Nuxt Content projects can be deployed to AWS Amplify with zero configuration.
 The module will automatically detect an AWS Amplify environment and will prepare the necessary configuration for deployment.
+
+## Option A: Use native `node:sqlite`
+
+In order to use native `node:sqlite` package, you need to change node version to 22+. This can be easily done
+in Amplify dashboard via `Build Settings` > `Live Package Updates` > `Package (Node.js version) = 22`.
+
+This is also possible via `amplify.yml` inside `preBuild` phase.
+
+```yml
+frontend:
+  phases:
+    preBuild:
+      commands:
+        - nvm install 22
+        - nvm use 22
+        - node -v
+        - npm ci
+```
+
+## Option B: Use `sqlite3`
 
 All you need to do is to install `sqlite3` package in your project and go to AWS Amplify dashboard and create a new project using git repository.
 
