docs: fix docker deployment typo

--- a/docs/content/docs/6.deploy/9.docker.md
+++ b/docs/content/docs/6.deploy/9.docker.md
@@ -58,7 +58,7 @@ WORKDIR /app
 
 COPY package.json bun.lock* ./
 
-# use ignore-scripts to avoid builting node modules like better-sqlite3
+# use ignore-scripts to avoid building node modules like better-sqlite3
 RUN bun install --frozen-lockfile --ignore-scripts
 
 # Copy the entire project
