chore: upgrade deps

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -3,7 +3,7 @@ title: Installation
 description: Get started with Nuxt Content v3 in your Nuxt application.
 ---
 
-### Install the Package
+## Install the Package
 
 Choose your preferred package manager to install Nuxt Content v3:
 
@@ -25,7 +25,7 @@ bun add @nuxt/content
 ```
 ::
 
-### Register the Module
+## Register the Module
 
 Add the Nuxt Content module to your `nuxt.config.ts`:
 
@@ -35,7 +35,7 @@ export default defineNuxtConfig({
 })
 ```
 
-### Automatic Setup
+## Automatic Setup
 
 When starting a new Nuxt project with the `create-nuxt` CLI, you can simply select `@nuxt/content` from the interactive module selector. This will automatically install and register the module for you.
 
@@ -71,7 +71,7 @@ If you don't want to install any package, you can use native SQLite from Node.js
 Checkout [`experimental.nativeSqlite` configuration](/docs/getting-started/configuration#experimentalnativesqlite-deprecated-use-sqliteconnector).
 ::
 
-### Create your First Collection
+## Create your First Collection
 
 Create a `content.config.ts` file in your project root directory:
 
@@ -98,7 +98,7 @@ The `type: page` means there is a 1-to-1 relationship between content files and 
 Learn more in our **Collections guide**.
 ::
 
-### Create your First Markdown Page
+## Create your First Markdown Page
 
 Create a `content/index.md` file in your project root directory:
 
@@ -110,7 +110,7 @@ Here is some content.
 
 Read more about writing [Markdown pages](/docs/files/markdown).
 
-### Display your Page
+## Display your Page
 
 Create a `pages/index.vue` file and display the page content:
 
