--- a/docs/content/docs/2.collections/4.validators.md
+++ b/docs/content/docs/2.collections/4.validators.md
@@ -9,7 +9,6 @@ Nuxt Content supports defining collection schemas with multiple validators. Out 
 
 ## Using Zod v3
 
-
 ### Install
 
 ```bash
@@ -57,7 +56,7 @@ The `z` re-export from `@nuxt/content` is deprecated and will be removed in a fu
 
 Zod v4 provides a native JSON Schema export. No `zod-to-json-schema` dependency is required.
 
-### Install
+### Install Zod
 
 ```bash
 pnpm add -D zod
@@ -93,7 +92,7 @@ export default defineContentConfig({
 ## Using Valibot
 
 Use Valibot primitives to define your schema.
-### Install
+### Install Valibot
 
 ```bash
 pnpm add -D valibot @valibot/to-json-schema
@@ -144,5 +143,3 @@ You can enrich fields for Studio via `property(...).editor({ ... })` with both v
 ::tip{to="/docs/studio/content"}
 Learn how editor metadata maps to form inputs in Studio.
 ::
-
-
