--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -227,7 +227,7 @@ This will be rendered inside the `description` slot.
   :::code-preview{icon="i-lucide-eye" label="Preview"}
     ::::example-hero
     My Page Title
-    
+
     #description
     This will be rendered inside the `description` slot.
     ::::
@@ -425,14 +425,14 @@ In addition to mdc components and `span`, attribute syntax will work on images, 
 ```md [index.md]
 Attributes work on:
 
-- [link](#attributes){style="background-color: green;"}, `code`{style="color: cyan;"},
+- [Attributes](#attributes){style="background-color: green;"}, `code`{style="color: cyan;"},
 - _italic_{style="background-color: yellow; color:black;"} and **bold**{style="background-color: lightgreen;"} texts.
 ```
 
   :::code-preview{prose label="Preview"}
   Attributes work on:
 
-  - [link](#attributes){style="background-color: green;"}, `code`,
+  - [Attributes](#attributes){style="background-color: green;"}, `code`,
   - *italic* and **bold** texts.
   :::
 ::
