--- a/docs/content/docs/5.components/2.prose.md
+++ b/docs/content/docs/5.components/2.prose.md
@@ -22,11 +22,11 @@ Prose components are originally part of [`@nuxtjs/mdc`](https://github.com/nuxt-
 
 ::code-group
 ```md [Code]
-[Link](/docs/components/prose)
+[Prose Components](/docs/components/prose)
 ```
 
   :::code-preview{icon="i-lucide-eye" label="Preview"}
-  [Link](/docs/components/prose)
+  [Prose Components](/docs/components/prose)
   :::
 ::
 
