--- a/docs/content/docs/9.studio/3.providers.md
+++ b/docs/content/docs/9.studio/3.providers.md
@@ -13,11 +13,11 @@ seo:
 To use GitHub as your Git provider, you need to create a GitHub OAuth application.
 
 ::prose-steps{level="4"}
-#### Navigate to GitHub Developer Settings
+### Navigate to GitHub Developer Settings
 
 Go to [GitHub Developer Settings](https://github.com/settings/developers) and click **New OAuth App**
 
-#### Configure the OAuth Application
+### Configure the OAuth Application
 
 Fill in the required fields:
 
@@ -25,14 +25,14 @@ Fill in the required fields:
 - **Homepage URL**: `https://yourdomain.com`
 - **Authorization callback URL**: `https://yourdomain.com`:note [If you want to try studio locally, set the callback url to your local url `http://localhost:3000`]
 
-#### Copy Your Credentials
+### Copy Your Credentials
 
 After creating the OAuth app, you'll receive:
 
 - A **Client ID** (visible immediately)
 - A **Client Secret** (click **Generate a new client secret**)
 
-#### Set your environment Variables
+### Set your environment Variables
 
 Add the GitHub OAuth credentials to your deployment platform's environment variables or in your `.env` file in local
 
@@ -51,11 +51,11 @@ That's it! Once deployed with the appropriate credentials set as environment var
 To use GitLab as your Git provider, you need to create a GitLab OAuth application.
 
 ::prose-steps{level="4"}
-#### Navigate to GitLab Applications
+### Navigate to GitLab Applications
 
 Go to your GitLab [User Settings → Applications](https://gitlab.com/-/user_settings/applications) (or your group/organization settings) and create a **New Application**.
 
-#### Configure the OAuth Application
+### Configure OAuth Application
 
 Fill in the required fields:
 
@@ -63,14 +63,14 @@ Fill in the required fields:
 - **Redirect URI**: `https://yourdomain.com/__nuxt_studio/auth/gitlab`
 - **Scopes**: Select `api` (required for publication) :note[If you want to try studio locally, add your local url as redirect URI: `http://localhost:3000/__nuxt_studio/auth/gitlab`]
 
-#### Copy Your Credentials
+### Copy Your GitLab Credentials
 
 After creating the OAuth application, you'll receive:
 
 - An **Application ID** (visible immediately)
 - A **Secret** (visible immediately)
 
-#### Set your environment Variables
+### Set environment Variables
 
 Add the GitLab OAuth credentials to your deployment platform's environment variables or in your `.env` file in local
 
