--- a/docs/content/docs/9.studio/4.content.md
+++ b/docs/content/docs/9.studio/4.content.md
@@ -181,7 +181,7 @@ For now, this section covers the legacy documentation from the original Nuxt Stu
 
 ![YAML and JSON edition with auto generated form](/blog/frontmatters.png)
 
-This editor is used whether you’re editing the [frontmatter]() of a `Markdown` file or a `JSON` / `YAML` file.
+This editor is used whether you’re editing the frontmatter of a `Markdown` file or a `JSON` / `YAML` file.
 
 It eliminates the need to interact directly with complex file syntax. Instead, a form is automatically generated based on the provided user [collection schema](/docs/collections/define).
 
